File apps/ledger-live-mobile/src/locales/en/common.json was updated on ru-RU locale

--- a/apps/ledger-live-mobile/src/locales/ru/common.json
+++ b/apps/ledger-live-mobile/src/locales/ru/common.json
@@ -88,7 +88,11 @@
     "getSupport" : "Поддержка",
     "comingSoon" : "Скоро",
     "restart" : "Перезагрузка",
-    "loadMore" : "Показать больше"
+    "loadMore" : "Показать больше",
+    "patterns" : {
+      "id" : "ID {{ value }}",
+      "times" : "x{{ value }}"
+    }
   },
   "errors" : {
     "countervaluesUnavailable" : {
@@ -1124,7 +1128,7 @@
     "sections" : {
       "learn" : {
         "title" : "Учитесь",
-        "desc" : "Узнайте о криптовалюте, Web3, цифровой безопасности и многом другом"
+        "desc" : "Узнайте о криптовалюте, Web3, цифровой безопасности и многом другом..."
       },
       "news" : {
         "title" : "Новости",
@@ -1132,7 +1136,7 @@
       },
       "ledgerApps" : {
         "title" : "Приложения",
-        "desc" : "Познакомьтесь с интегрированными приложениями прямо внутри Ledger"
+        "desc" : "Познакомьтесь с приложениями, интегрированными прямо в Ledger Live."
       },
       "earn" : {
         "title" : "Растите",
@@ -1279,8 +1283,13 @@
       },
       "recovery" : "Есть фраза восстановления?",
       "protect" : {
-        "label" : "~60 мин.",
-        "subTitle" : "Восстановить с помощью Protect"
+        "subTitle" : "Восстановить с Ledger Recover",
+        "drawer" : {
+          "title" : "Использовать Ledger Nano X",
+          "desc" : "Мягкий запуск Ledger Recover доступен только для Ledger Nano X",
+          "buyNanoX" : "Приобретите Ledger Nano X",
+          "discoverBenefits" : "Изучите преимущества"
+        }
       }
     },
     "stepNewDevice" : {
@@ -1507,25 +1516,20 @@
     "stepProtect" : {
       "bullets" : {
         "0" : {
-          "title" : "Посмотреть ",
-          "label" : "Узнайте, как взаимодействовать с устройством, по инструкциям на экране."
+          "title" : "Выберите «Restore» (Восстановить)",
+          "label" : "Для подтверждения нажмите обе кнопки одновременно."
         },
         "1" : {
-          "title" : "Выберите «Restore» (Восстановить)",
-          "label" : "Для подтверждения выбора нажмите обе кнопки одновременно."
-        },
-        "2" : {
-          "title" : "Выберите «Restore with Protect» (Восстановить с помощью Protect)",
-          "label" : "Для подтверждения выбора нажмите обе кнопки одновременно."
+          "title" : "Выберите «Restore using Ledger Recover» (Восстановить с Ledger Recover)",
+          "label" : "Для подтверждения нажмите обе кнопки одновременно."
         }
       },
       "nextStep" : "Продолжить",
       "extraInfo" : {
-        "tooltip" : "Не отображается в Ledger",
-        "title" : "Почему в Ledger не отображается опция восстановления с помощью Protect?",
-        "desc1" : "Скорее всего, ваше устройство не совместимо с Protect. Но не стоит волноваться: мы расскажем, как всё исправить.",
-        "desc2" : "Свяжитесь с нами через # и выберите «Мой Ledger не показывает опцию восстановления с помощью Protect». Вам обязательно помогут.",
-        "cta" : "Выполните действия вручную",
+        "tooltip" : "Если нет «Restore using Ledger Recover»",
+        "title" : "ОС вашего Ledger Nano X необходимо обновить",
+        "desc" : "Попробуйте обновить ОС самостоятельно или обратитесь за помощью в Поддержку Ledger.",
+        "cta" : "Как обновить устройство",
         "supportLink" : "Связаться с Поддержкой Ledger"
       }
     },
@@ -1667,8 +1671,9 @@
         }
       },
       "protectConnectionInformationModal" : {
-        "title" : "Почему не подключается устройство Ledger?",
-        "description" : "После активации Bluetooth на устройстве Ledger иногда могут возникать проблемы подключения к мобильному приложению Ledger Live. Чтобы исправить это, воспользуйтесь кнопкой «Как это исправить?»."
+        "title" : "Подключение Ledger Nano X",
+        "description" : "Не забудьте поднести смартфон поближе к устройству Ledger и повторите попытку. <LinkBluethooth>Проблемы подключения по Bluetooth®.</LinkBluethooth>\n\nЕсли Bluetooth® не работает, проблема может быть в ОС на устройстве Ledger. Попробуйте обновить ОС самостоятельно или обратитесь в Поддержку Ledger. ",
+        "learnHowToUpdate" : "Как обновить устройство"
       }
     },
     "stepImportAccounts" : {
@@ -1892,7 +1897,9 @@
     "seedStep" : {
       "title" : "Секретная фраза восстановления",
       "doneTitle" : "Фраза восстановления подтверждена",
-      "description" : "Фраза восстановления — это секретный набор из 24 слов для восстановления ваших приватных ключей. {{productName}} самостоятельно генерирует уникальную фразу восстановления, причём у Ledger нет её копии"
+      "description" : "Фраза восстановления — это секретный набор из 24 слов для восстановления ваших приватных ключей. {{productName}} самостоятельно генерирует уникальную фразу восстановления, причём у Ledger нет её копии",
+      "selection" : "Выберите подходящий вариант настройки.",
+      "recovery" : "Для безопасности криптоактивов при восстановлении используйте секретную мнемоническую фразу, которая была создана устройством Ledger.\n\nНет фразы восстановления? Воспользуйтесь {{productName}} для создания новой фразы."
     },
     "softwareChecksSteps" : {
       "title" : "Проверка устройства и ПО",
@@ -3441,6 +3448,15 @@
         "description" : "Максимальная расходуемая сумма — это баланс средств на счету, которые можно отправить."
       }
     }
+  },
+  "editTransaction" : {
+    "header" : "Изменение деталей транзакции",
+    "stuckTx" : "Ваша последняя исходящая транзакция застряла. Ускорьте её за счёт увеличения комиссии или отмените.",
+    "speedupTxMessage" : "Ваша транзакция сейчас проводится. При необходимости её можно ускорить за счёт увеличения комиссии или отменить.",
+    "speedupOrCancel" : "Ускорение или отмена",
+    "resubmitTxDescription" : "Повторите транзакцию с большей комиссией сети.",
+    "cancelTxDescription" : "Отправьте 0 ETH на собственный адрес. Для успешной отмены комиссия сети для новой транзакции должна быть на 10-30% выше, чем в предыдущей.",
+    "currentNetworkFee" : "Актуальная комиссия сети = {{amount}} ETH"
   },
   "requestAccount" : {
     "stepperHeader" : {
@@ -5446,6 +5462,7 @@
     "warnDelegation" : "Делегирование ваших голосов не гарантирует вознаграждений от выбранного валидатора.",
     "to" : "в",
     "from" : "с",
+    "yield" : "Ориент. доход",
     "forAnEstYield" : "ради ориент. дохода",
     "yieldPerYear" : "{{yield}}/год",
     "yieldInfos" : "Ставки доходности от",
@@ -5573,6 +5590,7 @@
     "cta" : "Продолжить"
   },
   "exchange" : {
+    "count" : "+ ещё {{count}}",
     "buy" : {
       "screenTitle" : "КУПИТЬ КРИПТОВАЛЮТУ",
       "tabTitle" : "Покупка",
@@ -6026,22 +6044,10 @@
       "status" : {
         "new" : {
           "title" : "Новинка",
-          "desc" : "Резервная копия вашей фразы восстановления",
-          "0" : {
-            "title" : "Ledger доверяют более 5 миллионов человек"
-          },
-          "1" : {
-            "title" : "Фраза восстановления безопасно привязана к вашей личности"
-          },
-          "2" : {
-            "title" : "Шифрование первоклассного уровня"
-          },
-          "3" : {
-            "title" : "Фраза делится на 3 части, которые хранятся децентрализованно. Украсть её будет невозможно"
-          },
+          "desc" : "Восстановите доступ к кошельку без фразы восстановления.",
           "actions" : {
-            "learnMore" : "Подробнее",
-            "alreadySubscribed" : "Уже подписаны на Protect?"
+            "learnMore" : "Какая от этого польза?",
+            "alreadySubscribed" : "Уже подписаны? <LinkAccount>Посмотреть аккаунт</LinkAccount>"
           }
         },
         "confirmIdentity" : {
@@ -6104,5 +6110,8 @@
     "title" : "Новостная рассылка",
     "poweredByCryptopanic" : "Разработано Cryptopanic",
     "noPosts" : "Пока здесь ничего нет"
+  },
+  "deviceConnect" : {
+    "title" : "Добавление устройства"
   }
 }
